# audio-3ds

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py
src/agent/: cnn_model.py  train.py  train_cnn.py
src/agent/cnn/: __init__.py  __main__.py  augment.py  cache.py  cli.py  config.py  dataset.py  metrics.py  rollout.py  rooms.py  timefmt.py  trainer.py
src/env/: echo_env.py
src/sim/: acoustic.py  people_motion.py  ray.py  room.py
